crates/bijux-domain-bam/tests/snapshots/bijux-domain-bam__contracts__stage_contract__bam_markdup.snap
---
source: crates/bijux-domain-bam/tests/stage_contract_snapshots.rs
expression: json
---
{
  "audit_artifacts": [
    {
      "filename": "markdup.bam",
      "name": "markdup_bam"
    },
    {
      "filename": "markdup.bam.bai",
      "name": "markdup_bai"
    },
    {
      "filename": "flagstat.before.txt",
      "name": "flagstat_before"
    },
    {
      "filename": "flagstat.after.txt",
      "name": "flagstat_after"
    },
    {
      "filename": "idxstats.before.txt",
      "name": "idxstats_before"
    },
    {
      "filename": "idxstats.after.txt",
      "name": "idxstats_after"
    },
    {
      "filename": "markdup.summary.json",
      "name": "summary"
    },
    {
      "filename": "stage.metrics.json",
      "name": "stage_metrics"
    }
  ],
  "inputs": [
    "bam"
  ],
  "io": {
    "deterministic": false,
    "duplicate_policy": "marks_duplicates",
    "emits_bam": true,
    "emits_report": true,
    "indexing": "requires_index_and_produces_index",
    "input_kind": "Bam",
    "mapping_quality_policy": "no_mapping_quality_filter",
    "nondeterminism_reason": "duplicate marking can be tool-dependent",
    "output_kind": "Bam",
    "read_group_policy": "preserves_read_groups",
    "sorting": "requires_coordinate_sorted_input"
  },
  "outputs": [
    "markdup_bam",
    "markdup_bai",
    "flagstat_before",
    "flagstat_after",
    "idxstats_before",
    "idxstats_after",
    "summary",
    "stage_metrics"
  ],
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "bam.markdup",
  "tool_ids": [
    "picard"
  ]
}
